--- a/psi/algorithm/ypir/BUILD.bazel
+++ b/psi/algorithm/ypir/BUILD.bazel
@@ -93,7 +93,10 @@ psi_cc_library(
 
 psi_cc_library(
     name = "util",
-    srcs = ["util.cc"],
+    srcs = [
+        "matmul.cpp",
+        "util.cc",
+    ],
     hdrs = ["util.h"],
     deps = [
         ":types",
@@ -190,5 +193,3 @@ psi_cc_test(
         "//psi/algorithm/spiral:poly_matrix_utils",
     ],
 )
-
-
